<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.setting.SettingFragment">

    <TextView
        style="@style/text_style_title_01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF9F9F9"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:text="@string/text_setting_title_app" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/text_style_text_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="12dp"
            android:text="@string/text_setting_notification"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp" />
    </RelativeLayout>

    <TextView
        style="@style/text_style_title_01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF9F9F9"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:text="@string/text_setting_title_information" />

    <TextView
        android:id="@+id/text_survey"
        style="@style/text_style_text_01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:text="@string/text_setting_survey" />

</LinearLayout>