<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".walkthrough.name.NameFragment">

    <data>

        <variable
            name="viewModel"
            type="com.monthlywriting.android.beta.walkthrough.name.NameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_chat"
            style="@style/text_style_text_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="180dp"
            android:text="@string/text_get_name"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/iv_bear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_bear"
            android:layout_width="44dp"
            android:layout_height="39dp"
            android:layout_marginBottom="54dp"
            android:src="@drawable/img_bear"
            app:layout_constraintBottom_toTopOf="@id/et_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_name"
            style="@style/text_style_edit_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/background_edit_text_border"
            android:hint="@string/text_hint_get_name"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:maxLines="1"
            android:padding="16dp"
            android:text="@={viewModel.name}"
            app:layout_constraintBottom_toTopOf="@id/btn_next" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/text_style_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="62dp"
            android:text="@string/text_next"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>