<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.goal.detail.GoalDetailFragment">

    <RelativeLayout
        android:id="@+id/rl_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_frame_skin"
        android:gravity="start"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_goal"
            style="@style/text_style_title_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="13dp"
            android:layout_toStartOf="@id/iv_delete" />

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:src="@drawable/ic_btn_delete"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="13dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@id/tv_add_memo"
        app:layout_constraintTop_toBottomOf="@id/rl_goal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title_photo"
                style="@style/text_style_title_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_title_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@id/tv_title_photo" />

            <TextView
                android:id="@+id/tv_title_memo"
                style="@style/text_style_title_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/text_title_memo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_photo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@id/tv_title_memo" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tv_add_memo"
        style="@style/text_style_edit_02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:textColor="@color/color_edittext"
        android:background="@drawable/text_border"
        android:padding="16dp"
        android:text="@string/hint_add_memo"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>