<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.writing.shorts.WritingShortFragment">

    <data>

        <variable
            name="viewModel"
            type="com.monthlywriting.android.beta.ui.writing.shorts.WritingShortViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                style="@style/text_style_title_01"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical|start"
                android:text="@string/text_title_monthly_write" />

            <TextView
                android:id="@+id/tv_chat_short_1"
                style="@style/text_style_chat_received"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />

            <RadioGroup
                android:id="@+id/rg_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/background_text_chat_sent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="25dp">

                <RadioButton
                    android:id="@+id/rb_emoji_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:background="@drawable/selector_btn_emoji"
                    android:button="@null"
                    android:gravity="center" />

                <RadioButton
                    android:id="@+id/rb_percentage_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:background="@drawable/selector_btn_percentage"
                    android:button="@null"
                    android:gravity="center" />

                <RadioButton
                    android:id="@+id/rb_star_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:background="@drawable/selector_btn_star"
                    android:button="@null"
                    android:gravity="center" />

                <RadioButton
                    android:id="@+id/rb_level_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:background="@drawable/selector_btn_level"
                    android:button="@null"
                    android:gravity="center" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/rl_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_chat_sent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_emoji_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.emoji2.widget.EmojiTextView
                        android:id="@+id/tv_emoji_rating"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/background_frame_grey_dark"
                        android:gravity="center"
                        android:text="@{viewModel.textEmoji}" />

                    <androidx.emoji2.widget.EmojiEditText
                        android:id="@+id/et_emoji_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/background_frame_grey_dark"
                        android:fontFamily="@font/pretendard_semibold"
                        android:hint="@string/hint_add_emoji"
                        android:includeFontPadding="false"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="6dp"
                        android:textAlignment="center"
                        android:textColorHint="#FF979797"
                        android:textSize="12sp" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/layout_percentage_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="48dp"
                    android:layout_marginVertical="32dp"
                    android:visibility="gone">

                    <SeekBar
                        android:id="@+id/seekbar_percentage_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:background="@null"
                        android:max="100"
                        android:progressDrawable="@drawable/background_seekbar_custom"
                        android:splitTrack="false"
                        android:thumb="@drawable/ic_seekbar_thumb" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/seekbar_percentage_rating"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/font_pretendard_semibold"
                        android:includeFontPadding="false"
                        android:text="@{viewModel.numPercentage}"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_star_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="15dp"
                    android:visibility="gone">

                    <RatingBar
                        android:id="@+id/ratingbar_star_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:rating="3"
                        android:stepSize="0.5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ratingbar_star_rating"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/font_pretendard_semibold"
                        android:includeFontPadding="false"
                        android:text="@{Float.toString(viewModel.numStars)}"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </RelativeLayout>

                <RadioGroup
                    android:id="@+id/layout_level_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="37dp"
                    android:background="@drawable/background_frame_grey_dark"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="38dp"
                    android:paddingVertical="13dp"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/rb_good"
                        android:layout_width="14dp"
                        android:layout_height="15dp"
                        android:background="@drawable/selector_btn_level_good"
                        android:button="@null" />

                    <RadioButton
                        android:id="@+id/rb_fair"
                        android:layout_width="14dp"
                        android:layout_height="15dp"
                        android:layout_marginHorizontal="56dp"
                        android:background="@drawable/selector_btn_level_fair"
                        android:button="@null" />

                    <RadioButton
                        android:id="@+id/rb_poor"
                        android:layout_width="14dp"
                        android:layout_height="15dp"
                        android:background="@drawable/selector_btn_level_poor"
                        android:button="@null" />
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:id="@+id/btn_save_rating"
                style="@style/text_style_title_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/background_frame_jjinskin"
                android:paddingHorizontal="52dp"
                android:paddingVertical="12dp"
                android:text="@string/text_save_rating" />

            <TextView
                android:id="@+id/tv_chat_short_2"
                style="@style/text_style_chat_received"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />

            <RelativeLayout
                android:id="@+id/rl_saved_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_text_chat_sent">

                <TextView
                    android:id="@+id/tv_evaluation"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/background_saved_rating_border"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/tv_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="16dp"
                    android:layout_toEndOf="@id/tv_evaluation"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_chat_short_3"
                style="@style/text_style_chat_received"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/text_monthly_writing_chat_short_3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_stop_monthly_writing"
                    style="@style/text_style_title_01"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_frame_grey_bright"
                    android:gravity="center"
                    android:paddingVertical="12dp"
                    android:text="@string/text_stop_monthly_writing" />

                <TextView
                    android:id="@+id/btn_continue_monthly_writing"
                    style="@style/text_style_title_01"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_frame_jjinskin"
                    android:gravity="center"
                    android:paddingVertical="12dp"
                    android:text="@string/text_continue_monthly_writing" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>